# hakubun

./: .gitmodules  CHANGELOG  README.md  pyproject.toml
hakubun/: accounts.py  data.py  engine.py  hakubun.kdev4  utils.py
hakubun/lib/: lib.py  libanilist.py  libkitsu.py  libkitsu_graphql.py  libmal.py  libshikimori.py  libvndb.py
hakubun/tracker/: inotify.py  inotifyBase.py  jellyfin.py  kodi.py  mpris.py  plex.py  polling.py  pyinotify.py  tracker.py  win32.py
hakubun/ui/: cli.py
hakubun/ui/gtk/: __init__.py  accountswindow.py  application.py  imagebox.py  mainview.py  searchwindow.py  settingswindow.py  showinfobox.py  showinfowindow.py  showtreeview.py  statusicon.py  window.py
hakubun/ui/gtk/data/: app-menu.ui  mainview.ui  shortcuts.ui
hakubun/ui/qt/: __init__.py  accounts.py  add.py  delegates.py  details.py  mainwindow.py  models.py  settings.py  util.py  widgets.py  workers.py
hooks/: monthly.py  presence.py
packaging/aur/: .SRCINFO  PKGBUILD  hakubun-gtk.desktop  hakubun-qt.desktop
tests/: test_anime_info_extractor.py
trackma/: data.py  engine.py  utils.py
trackma/lib/: libanilist.py  libkitsu.py  libkitsu_graphql.py  libmal.py
trackma/tracker/: inotify.py  mpris.py  pyinotify.py  tracker.py
trackma/ui/: cli.py
trackma/ui/gtk/: airingwindow.py  application.py  mainview.py  searchwindow.py  settingswindow.py  showeventtype.py  showinfobox.py  showtreeview.py  window.py
trackma/ui/gtk/data/: app-menu.ui  settingswindow.ui  window.ui
trackma/ui/qt/: add.py  airing.py  delegates.py  details.py  mainwindow.py  models.py  settings.py  widgets.py  workers.py
