[project]
name = "hakubun"
version = "0.15"
description = "Open multi-site list manager for Unix-like systems (independent fork of Trackma)"
authors = [{ name = "trektn", email = "trekt@poopf.art" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
keywords = [
    "list manager",
    "gtk",
    "qt",
    "myanimelist",
    "kitsu",
    "anilist",
    "shikimori",
    "vndb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet",
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
]

[project.optional-dependencies]
gtk = [
    "pygobject>=3.42.1,<4",
    "pycairo>=1.20.0,<2",
    "pillow>=11.0.0,<12",
]
qt = [
    "pyqt6>=6.2.0,<7",
    "pillow>=11.0.0,<12",
]
ui = [
    "pygobject>=3.42.1,<4",
    "pycairo>=1.20.0,<2",
    "pillow>=11.0.0,<12",
    "pyqt6>=6.2.0,<7",
]
trackers = [
    "inotify>=0.2.10,<0.3",
    "pyinotify>=0.9.6,<0.10",
    "jeepney>=0.8.0,<0.9",
]
discord_rpc = ["pypresence>=4.2.1,<5"]
anitopy = ["anitopy>=2.0.0,<3"]

[project.urls]
Homepage = "https://github.com/trektn/hakubun"
Repository = "https://github.com/trektn/hakubun"
Upstream = "https://github.com/z411/trackma"

[project.scripts]
hakubun = "trackma.ui.cli:main"
hakubun-gtk = "trackma.ui.gtk:main"
hakubun-qt = "trackma.ui.qt:main"

[tool.uv]

[tool.uv.build-backend]
module-root = ""
module-name = "trackma"

[build-system]
requires = ["uv_build>=0.8.13"]
build-backend = "uv_build"
